--- a/src/app/modules/profile/profile.component.html
+++ b/src/app/modules/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="profile">
   <app-side-nav></app-side-nav>
   <div class="page-wrapper pb-4">
-    <div class="container-fluid px-4">
+    <div class="container-fluid px-4" *ngIf="user">
       <div class="row">
         <div class="col-lg-4 col-4">
           <!-- <app-user-info></app-user-info> -->
@@ -33,8 +33,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-8 col-8 ">
-          <div class="widget-section bg-white p-4 radius-8 mt-4 text-center">
+        <div class="col-lg-8 col-8 " >
+          <div *ngFor="let sec of sectionOrder">
+          <div  *ngIf="sec.sectionId==profileSectionEnum.Tasks" class="widget-section bg-white p-4 radius-8 mt-4 text-center">
             <div class="row">
               <div class="col-lg col-md-6 d-flex flex-column justify-content-between">
                 <h4 class="fs-14 fw-500 text-c-4 mb-3">{{'Total-Tasks' | translate }}</h4>
@@ -88,9 +89,12 @@
                   </div>
                 </div>
               </div> -->
+             
             </div>
+            <button (click)="changeOrder(sec,true)" *ngIf="sec.orderId!=1">Up</button>
+            <button  (click)="changeOrder(sec,false)" *ngIf="sec.orderId!=4">down</button>
           </div>
-          <div class="disc-files-section bg-white p-4 radius-8 mt-4">
+          <div   *ngIf="sec.sectionId==profileSectionEnum.Bio" class="disc-files-section bg-white p-4 radius-8 mt-4">
             <div class="row discription">
               <div class="col-12">
                 <h4 class="fs-16 fw-500 text-c-4 mb-3">{{'Bio' | translate}}</h4>
@@ -110,8 +114,11 @@
                 </div>
               </div>
             </div>
+            <button (click)="changeOrder(sec,true)" *ngIf="sec.orderId!=1">Up</button>
+            <button  (click)="changeOrder(sec,false)" *ngIf="sec.orderId!=4">down</button>
           </div>
-          <div class="tasks-section mt-4 p-4 bg-white radius-8">
+           <!-- history -->
+          <div  *ngIf="sec.sectionId==profileSectionEnum.WorkHistory" class="tasks-section mt-4 p-4 bg-white radius-8">
             <h4 class="fs-16 fw-500 text-c-4 mb-4">{{'WorkHistory' | translate }}</h4>
             <div class="table-container">
               <div class="custom-table">
@@ -178,10 +185,12 @@
                 </div>
               </div>
             </div>
+            <button (click)="changeOrder(sec,true)" *ngIf="sec.orderId!=1">Up</button>
+            <button  (click)="changeOrder(sec,false)" *ngIf="sec.orderId!=4">down</button>
           </div>
 
           <!-- Rejected Tasks -->
-          <div class="tasks-section mt-4 p-4 bg-white radius-8">
+          <div *ngIf="sec.sectionId==profileSectionEnum.RejectedTask" class="tasks-section mt-4 p-4 bg-white radius-8">
             <h4 class="fs-16 fw-500 text-c-4 mb-4">{{'RejectedTask' | translate }}</h4>
             <div class="table-container">
               <div class="custom-table">
@@ -224,9 +233,11 @@
                 </div>
               </div>
             </div>
+            <button (click)="changeOrder(sec,true)" *ngIf="sec.orderId!=1">Up</button>
+            <button  (click)="changeOrder(sec,false)" *ngIf="sec.orderId!=4">down</button>
           </div>
 
-
+        </div>
         </div>
       </div>
     </div>
